src/objects/Exception__c.object
<CustomObject>
    <description>For exception handling</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>Field to capture Class Name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_No__c</fullName>
        <description>Field to capture Error Number.</description>
        <label>Error No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>This field will display custom error message for the system generated exceptions</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Field to capture Exception Message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Field to capture Method Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>